# PokeTournamentRogue

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
Command/: CatchCommand.h  ChangeMoveCommand.h  EvolveCommand.h  ItemCommand.h  MoveCommand.h  NicknameCommand.h  ReleaseCommand.h  UpdateCommand.h
Controller/: Controller.cpp  Controller.h
Dialog/: BattleDialog.cpp  BattleDialog.h  GauntletDialog.cpp  GauntletDialog.h  SafariOverworldDialog.cpp  SafariOverworldDialog.h  SafariZoneDialog.cpp  SafariZoneDialog.h  SecretBossDialog.cpp  SecretBossDialog.h  ShopDialog.cpp  ShopDialog.h  SummaryDialog.cpp  SummaryDialog.h  TournamentDialog.cpp  TournamentDialog.h  TrainerDialog.cpp  TrainerDialog.h
Domain/: Pokemon.h
Engine/: BattleEngine.cpp  BattleEngine.h
Engine/AI/: AiDetector.cpp  AiDetector.h  Simulator.cpp  Simulator.h
Filter/: IPokemonFilter.h
Progression/: ProgressionManager.cpp  ProgressionManager.h  Trainer.h  TrainerRoster.cpp  TrainerRoster.h
Repository/: CSVRepository.cpp  CSVRepository.h  IRepository.h
ShowdownData/: moves.json  pokedex.json
Tests/: Tests.cpp  Tests.h  test_filter_db.json  test_undo_db.json
UI/: MainHall.cpp  MainHall.h  MainWindow.cpp  MainWindow.h
